added styles and comments

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
                 </ul>
             </nav>
             <div id="main-inputs">
-                <label for="first-name">First Name: </label>
-                <input type ="text" id ="first-name"><br>
-                <label for="last-name">Last Name: </label>
-                <input type ="text" id ="last-name"><br>
+                <div id ="first-name-container">
+                    <label for="first-name">First Name: </label>
+                    <input type ="text" id ="first-name"><br>
+                </div>
+                <div id ="last-name-container">
+                    <label for="last-name">Last Name: </label>
+                    <input type ="text" id ="last-name"><br>
+                </div>                
             </div>
         </div>
         
