--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <select id="first-name-languages">
 
                     </select>
+                    <input type="button" id="btn-first">
                 </div>
                 <div id ="last-name-container">
                     <label for="last-name">Last Name: </label>
@@ -33,11 +34,12 @@
                     <select id="last-name-languages">
 
                     </select>
+                    <input type="button" data-url="" id="btn-last">
                 </div>  
-                <input type="button" id="btnAPIRequest">              
+                <!-- <input type="button" id="btnAPIRequest">               -->
             </div>
         </div>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="index1.js"></script>
         
     </main>
     
