--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
                     <input type ="text" id ="first-name"><br>
                     <select id="first-name-languages">
 
-                    </select>
-                    <input type="button" id="btn-first">
+                    </select><br>
+                    <input type="button" value="Play!" id="btn-first">
                 </div>
                 <div id ="last-name-container">
                     <label for="last-name">Last Name: </label>
                     <input type ="text" id ="last-name"><br>
                     <select id="last-name-languages">
 
-                    </select>
-                    <input type="button" data-url="" id="btn-last">
+                    </select><br>
+                    <input type="button" value="Play!" data-url="" id="btn-last">
                 </div>  
                 <!-- <input type="button" id="btnAPIRequest">               -->
             </div>
         </div>
-        <script type="text/javascript" src="index1.js"></script>
+        <script type="text/javascript" src="index.js"></script>
         
     </main>
     
